--- a/start2.html
+++ b/start2.html
@@ -33,13 +33,15 @@
 						<p>Ваш номер телефона <span>*</span></p>
 						<input name="phone" type="tel">
 					</label>
+					<label id="email">
+						<p>E-mail адрес</p>
+						<input placeholder="ice_berg@gmail.com" name="email" type="email">
+					</label>
 					<label id="submit">
 						<p>Ваш вопрос</p>
-						<div class="text">
-							<textarea name="message" class="textarea" id="textarea_main"></textarea>
-						</div>
+						<textarea placeholder="Задайте Ваш вопрос" name="message" class="textarea textarea2" id="textarea"></textarea>
 					</label>
-					<button class="btn_red" type="submit">Начать чат</button>
+					<button class="btn_red btn_grey" type="submit">Начать чат</button>
 				</form>
 			</div>
 		</div>
