--- a/message.html
+++ b/message.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="chat_wrapper">
-		<div class="chat_container">
+		<div class="chat_container message_container">
 			<div class="resizer"></div>
 			<nav class="chat_header">
 				<span>Чат</span>
@@ -23,6 +23,28 @@
 				
 			</nav>
 			<div class="chat_main dialog">
+				<div class="message_wrapper">
+					<div class="message">
+						123
+						<span class="time">17:57</span>
+					</div>
+				</div>
+				<div class="message_wrapper">
+					<div class="message">
+						122222222222222423 122222222222222423 122222222222222423 122222222222222423
+						<span class="time">17:57</span>
+					</div>
+				</div>
+				<div class="message_wrapper">
+					<div class="message">
+						123
+						<span class="time">17:57</span>
+					</div>
+					<div class="message">
+						122222222222222423 122222222222222423 122222222222222423 122222222222222423
+						<span class="time">17:57</span>
+					</div>
+				</div>
 				<div class="message_wrapper">
 					<div class="message">
 						123
@@ -65,7 +87,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="rating">
+	<div class="rating first_rating">
 		<h3>Оценка качества обслуживания</h3>
 		<h4>1/4</h4>
 		<p>Основываясь на Вашем обращении к нашим специалистам, насколько вероятно, что Вы порекомендуете компанию Vodafone друзьям и знакомым?</p>
@@ -75,7 +97,7 @@
 			<div class="star"><span>2</span></div>
 			<div class="star"><span>3</span></div>
 			<div class="star"><span>4</span></div>
-			<div class="star"><span>5</span></div>
+			<div class="star"><span>5</span></div><br class="divider">
 			<div class="star"><span>6</span></div>
 			<div class="star"><span>7</span></div>
 			<div class="star"><span>8</span></div>
