--- a/start.html
+++ b/start.html
@@ -40,7 +40,7 @@
 							<textarea name="message" class="textarea" id="textarea_main"></textarea>
 						</div>
 					</label>
-					<button class="btn_red" type="submit">Начать чат</button>
+					<button class="btn_red submit" type="submit">Начать чат</button>
 				</form>
 			</div>
 		</div>
